--- a/final/local.tex
+++ b/final/local.tex
@@ -3,5 +3,6 @@
 \usepackage{flowchart}
 \newcommand{\FR}{\text{FR}}
 \newcommand{\DP}{\text{DP}}
-\newtheorem{theorem}{Theorem}
 \newtheorem{axiom}{Axiom}
+\newtheorem{theorem}{Theorem}
+\newtheorem{corollary}{Corollary}
