--- a/final/references.bib
+++ b/final/references.bib
@@ -40,6 +40,29 @@
   year={2019}
 }
 
+@article{shirwaiker,
+  author={Shirwaiker, Rohan A. and Okudan, G\"{u}l E.},
+  title={Triz and Axiomatic Design: A Review of Case-Studies and a Proposed Synergistic Use},
+  journal={Journal of Intelligent Manufacturing},
+  volume={19},
+  number={1},
+  pages={33--47},
+  month={February},
+  year={2008}
+}
+
+@incollection{tang,
+  author={Tang, Yunlong and Yang, Sheng and Zhao, Yaoyao F.},
+  title={Sustainable Design for Additive Manufacturing Through Functionality Integration and Part Consolidation},
+  editor={Muthu, Subramaniam S. and Savalani, Monica M.},
+  booktitle={Handbook of Sustainability in Additive Manufacturing},
+  volume={1},
+  publisher={Springer},
+  address={Singapore},
+  year={2016},
+  pages={101--144}
+}
+
 @book{chartrand,
   author={Chartrand, Gary and Zhang, Ping},
   title={A First Course in Graph Theory},
